# create-axum-app

./: Cargo.toml  README.md
src/: create_dir.rs  create_file.rs  main.rs
src/templates/: .env  main.rs
